# atlas

./: .gitignore  CMakeLists.txt  README.md
docs/: language.md
examples/: hello.atlas  math.atlas
include/atlas/: ast.h  lexer.h  parser.h  runtime.h  token.h  util.h
src/: ast.c  lexer.c  main.c  parser.c  runtime.c  util.c
tests/: run_tests.ps1  smoke.atlas
